# recipe-book

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.yml  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  audit-resolve.json  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js
src/: App.svelte  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_handle.rs  command.rs  database.rs  dom_content_loaded.rs  entity.rs  entity_crud.rs  event.rs  external_recipe.rs  file_storage.rs  fs.rs  log.rs  main.rs  migrator.rs  path.rs  protocol.rs  recipe_file_storage.rs  recipe_step_file_storage.rs  scraper.rs  search_index.rs  unit_conversion.rs  window.rs
src-tauri/src/api/: entity.rs
src-tauri/src/api/entity/: error.rs  ingredient.rs  recipe.rs  recipe_file.rs  recipe_ingredient.rs  recipe_step.rs
src-tauri/src/command/: entity.rs  error.rs  external_recipe.rs  ocr.rs  unit_conversion.rs  unit_list.rs
src-tauri/src/command/entity/: file.rs  ingredient.rs  recipe.rs  recipe_file.rs  recipe_ingredient.rs  recipe_ingredient_draft.rs  recipe_step.rs  recipe_step_file.rs  recipe_step_ingredient.rs  recipe_step_ingredient_draft.rs  unit_name.rs
src-tauri/src/entity/: file.rs  ingredient.rs  recipe.rs  recipe_file.rs  recipe_ingredient.rs  recipe_ingredient_draft.rs  recipe_step.rs  recipe_step_file.rs  recipe_step_ingredient.rs  recipe_step_ingredient_draft.rs  unit_name.rs
src-tauri/src/entity/unit_name/: unit.rs
src-tauri/src/entity_crud/: error.rs  file.rs  ingredient.rs  recipe.rs  recipe_file.rs  recipe_ingredient.rs  recipe_ingredient_draft.rs  recipe_step.rs  recipe_step_file.rs  recipe_step_ingredient.rs  recipe_step_ingredient_draft.rs  unit_name.rs
src-tauri/src/event/: answer_channel.rs  channel.rs  question_channel.rs
src-tauri/src/external_recipe/: error.rs  generic.rs  instakoch_de.rs  knusperstuebchen.rs  pinterest.rs  sallys_welt.rs  specific.rs
src-tauri/src/external_recipe/generic/: yoast_schema_graph.rs
src-tauri/src/external_recipe/pinterest/: relay_response.rs
src-tauri/src/external_recipe/specific/: knusperstuebchen.rs  pinterest.rs  sallys_welt.rs
src-tauri/src/file_storage/: error.rs
src-tauri/src/migrator/: m20230113_000001_init.rs  m20230218_135537_index.rs  m20230218_161605_image_type.rs  m20230221_221123_recipe_ingredient_optionals.rs  m20230223_192245_recipe_file.rs  m20230306_214922_1_0_0.rs
src-tauri/src/migrator/m20230113_000001_init/: ingredient.rs  recipe.rs  recipe_ingredient.rs  recipe_step.rs
src-tauri/src/migrator/m20230306_214922_1_0_0/: file.rs  ingredient.rs  recipe.rs  recipe_file.rs  recipe_ingredient.rs  recipe_ingredient_draft.rs  recipe_step.rs  recipe_step_file.rs  recipe_step_ingredient.rs  recipe_step_ingredient_draft.rs  unit_name.rs
src-tauri/src/protocol/: recipe_file.rs
src-tauri/src/recipe_file_storage/: error.rs
src-tauri/src/recipe_step_file_storage/: error.rs
(+166 files in other folders)
