[package]
name = "recipe-book"
version = "0.0.2"
description = "Recipe Book"
authors = [
    "Thomas Gauges <thomas.gauges@gmail.com>",
]
repository = "https://github.com/Toromyx/recipe-book"
edition = "2021"
rust-version = "1.70"

[build-dependencies.tauri-build]
version = "^1.2"
features = []

[dependencies.anyhow]
version = "^1.0"

[dependencies.async-trait]
version = "^0.1"

[dependencies.log]
version = "^0.4"

[dependencies.log4rs]
version = "^1.2"

[dependencies.mime_guess]
version = "^2.0"
default-features = false

[dependencies.mime2ext]
version = "^0.1"

[dependencies.percent-encoding]
version = "^2.2"

[dependencies.regex]
version = "^1.7"

[dependencies.reqwest]
version = "^0.11"

[dependencies.sea-orm]
version = "^0.11"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]

[dependencies.sea-orm-migration]
version = "^0.11"

[dependencies.sea-query]
version = "^0.28"

[dependencies.serde]
version = "^1.0"

[dependencies.serde_json]
version = "^1.0"

[dependencies.serde_with]
version = "^3.0"

[dependencies.tauri]
version = "^1.2"
features = [ "dialog-open", "protocol-all"]

[dependencies.tempfile]
version = "^3.7"

[dependencies.tesseract]
version = "^0.14"

[dependencies.thiserror]
version = "^1.0"

[dependencies.tokio]
version = "^1.24"
features = ["full"]

[dependencies.url]
version = "^2.3"

[dependencies.uuid]
version = "^1.4"
features = ["v4", "fast-rng"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs, it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
